@@ -36,6 +36,10 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-06-12 DP  1.8.0  Warn the user and allow her to abort before re-running
+                      a backup or restore to or from the same file, in the same
+                      session (can occur if the first attempt returns an error
+                      or warning). Per gripes from various users :-)
 2007-06-01 DP  1.8.0  Add support for multi-parameter aggregates.
 2007-05-31 DP  1.8.0  Retain column widths when refreshing the edit grid, per
                       Ferenc Lutischan.
